--- a/trunk/sqltoy-orm/pom.xml
+++ b/trunk/sqltoy-orm/pom.xml
@@ -24,6 +24,7 @@
 		<junit-platform.version>1.6.2</junit-platform.version>
 		<slf4j.version>1.7.30</slf4j.version>
 		<log4j.version>2.13.3</log4j.version>
+		<jpa.version>2.2</jpa.version>
 	</properties>
 	<licenses>
 		<license>
@@ -65,6 +66,13 @@
 
 	</distributionManagement>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>${jpa.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
